[package]
name = "mauna_kea"
version = "0.0.3"
edition = "2021"

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
regex = "1.6.0"
clipboard = "0.5.0"
reqwest = {version = "0.11.12", features = ["blocking"]}
colored = "2.0.0"
bitvec = "1.0.1"
image = "0.24.5"
argmin = {version = "0.7.0", features = ["rayon"]}
thiserror = "1.0.38"
argmin-math = "0.2.1"
genevo = "0.7.1"
ordered-float = "3.4.0"
typenum = "1.16.0"
kd-tree = "0.5.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
