[package]
name = "mauna_kea"
version = "0.0.3"
edition = "2021"

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
regex = "1.6.0"
reqwest = {version = "0.11.12", features = ["blocking"]}
colored = "2.0.0"
bitvec = "1.0.1"
image = "0.24.5"
thiserror = "1.0.38"
genevo = "0.7.1"
ordered-float = "3.4.0"
typenum = "1.16.0"
arboard = "3.2.0"
quadtree_rs = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[profile.release]
debug = true
